# mohu

./: .codecov.yml  .coderabbit.yaml  CONTRIBUTING.md  Cargo.toml  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: assign.yml  ci.yml  dco.yml  pr-review-bot.yml  pr-title.yml
crates/mohu-array/: Cargo.toml
crates/mohu-array/tests/: array_tests.rs
crates/mohu-buffer/: Cargo.toml
crates/mohu-buffer/benches/: buffer_ops.rs
crates/mohu-buffer/src/: alloc.rs  buffer.rs  layout.rs  lib.rs  ops.rs  pool.rs  strides.rs  view.rs
crates/mohu-buffer/tests/: arith_correctness.rs  dlpack_roundtrip.rs  integration.rs  layout_invariants.rs  proptest_buffer.rs
crates/mohu-core/tests/: core_tests.rs
crates/mohu-dtype/tests/: dtype_tests.rs
crates/mohu-error/: Cargo.toml
crates/mohu-error/src/: chain.rs  codes.rs  context.rs  error.rs  kind.rs  lib.rs  macros.rs  multi.rs  python.rs  reporter.rs  test_utils.rs
crates/mohu-error/tests/: error_tests.rs
crates/mohu-fft/: Cargo.toml
crates/mohu-fft/src/: freq.rs  helpers.rs  lib.rs  nd.rs  norm.rs  plan.rs  real.rs  transform.rs
crates/mohu-index/: Cargo.toml
crates/mohu-index/src/: boolean.rs  fancy.rs  gather.rs  lib.rs  slice.rs  take.rs  where_op.rs
crates/mohu-masked/: Cargo.toml
crates/mohu-random/: Cargo.toml
crates/mohu-simd/: Cargo.toml
crates/mohu-sparse/: Cargo.toml
crates/mohu-special/: Cargo.toml
crates/mohu-testing/: Cargo.toml
crates/mohu-ufunc/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dlpack.rs  fuzz_from_slice.rs  fuzz_layout.rs
(+59 files in other folders)
