[package]
name        = "mohu-buffer"
description = "Raw buffer allocation, memory layout, and stride arithmetic for mohu arrays"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[features]
default = ["mmap"]
mmap    = ["dep:memmap2"]

[dependencies]
mohu-error.workspace   = true
mohu-dtype.workspace   = true
rayon.workspace        = true
tracing.workspace      = true
smallvec.workspace     = true
half.workspace         = true
num-complex.workspace  = true
num-traits.workspace   = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dependencies.memmap2]
workspace = true
optional  = true
